--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,3 +11,10 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+
+ruby:
+  title: Programming Ruby 1.9
+  description:
+    This is a great and awesome book and I'm glad I have it. Really.
+  price: 49.50
+  image_url: ruby.png
