--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,8 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  product_id: 1
-  cart_id: 1
+  id: 1
+  product: one
+  cart: one
 
 two:
   product_id: 1
