--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,10 +1,10 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
-  address: MyText
-  email: MyString
-  pay_type: MyString
+  name: Bob Dole
+  address: 12345 Bob Dole Way
+  email: bobdole@bobdole.com
+  pay_type: Check
 
 two:
   name: MyString
